Fixing things. Doing it live!

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,5 +12,23 @@
   {% include google_analytics.html %}
   {% include google_plus_one.html %}
   {% include twitter_sharing.html %}
+	<script>
+	var pageTracker = _gat._getTracker("UA-97674-11");
+	pageTracker._initData();
+	pageTracker._trackPageview();
+	</script>
+	<script>
+	var _gauges = _gauges || [];
+	(function() {
+	var t   = document.createElement('script');
+	t.type  = 'text/javascript';
+	t.async = true;
+	t.id    = 'gauges-tracker';
+	t.setAttribute('data-site-id', '4e36125f613f5d557e000001');
+	t.src = '//secure.gaug.es/track.js';
+	var s = document.getElementsByTagName('script')[0];
+	s.parentNode.insertBefore(t, s);
+	})();
+	</script>
 </body>
 </html>
